--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
